Wrote the POST request iin server and client, and linked the submit button on the form to the request

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -33,5 +33,25 @@
         </thead>
         <tbody id="songTableBody"></tbody>
     </table>
+
+    <h2>Submit a New Artist</h2>
+    <form>
+        <input
+        placeholder="Artist Name"
+        type="text"
+        id="artistName"
+        >
+        <input
+        placeholder="Artist Birth Year"
+        type="text"
+        id="artistBorn"
+        >
+        <input
+        placeholder="Artist Death Year"
+        type="text"
+        id="artistDied"
+        >
+        <button onclick="createNewArtist(event)" class="submit-button">Submit</button>
+    </form>
 </body>
 </html>
